@@ -1,3 +1,7 @@
+* Fri Apr 07 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.1-0
+- Worked around a bug in EL6 where the ldap client library incorrectly handles
+  128 bit ciphers in the cipher list
+
 * Fri Mar 17 2017 Clayton Mentzer, Liz Nemsick 6.0.0-1
 - Updated README
 - Update puppet version in .travis.yaml
